FIX: Server config conflict and updated the frontend js fit the ajax call

--- a/src/main/webapp/demo/login.html
+++ b/src/main/webapp/demo/login.html
@@ -97,7 +97,7 @@ submitForm();
 		<tbody><tr>
 			<td width="20"><img height="10" alt="" src="./static/spacer.gif" width="20" border="0"></td>
 			<td><!-- begin contents -->	
-<form name="LoginForm" method="post" action=""><div><input type="hidden" name="org.apache.struts.taglib.html.TOKEN" value="d5344d1c0cf9d9e22bc45175e8ee1851"></div>	<!--
+<div><input type="hidden" name="org.apache.struts.taglib.html.TOKEN" value="d5344d1c0cf9d9e22bc45175e8ee1851"></div>	<!--
 			<INPUT TYPE=HIDDEN NAME="SMENC" VALUE="ISO-8859-1">
 			<INPUT type=HIDDEN name="SMLOCALE" value="US-EN">
 -->
@@ -149,7 +149,7 @@ submitForm();
               		     	   <td height="25"></td>
               		     	</tr>
 				</tbody></table>
-</form>
+
 <!-- end contents -->	
 			
 			</td>
