--- a/src/main/webapp/demo/index.html
+++ b/src/main/webapp/demo/index.html
@@ -12,18 +12,13 @@
 
     <script>
     $( document ).ready(function() {
-        console.log( "ready!" );
-
-        loadPage('./login.html');
-
+  window.location.href = window.location.protocol + "//" + window.location.host + "/adminfunc/demo/login.html";
     });
     </script>
 
 </head>
 <body>
-    <!-- <h1>root</h1> -->
-    <div id="root" style="width: 100%; height: 100%; border: 1px solid red;">1</div>
-
+<h1>Loading ...</h1>
 </body>
 </html>
 
