demo bug fix: - login cached - ajax call error

--- a/src/main/webapp/demo/landing.html
+++ b/src/main/webapp/demo/landing.html
@@ -17,6 +17,14 @@
 .hide { visibility:hidden; }
 .show { visibility:visible;}
 </style>
+
+        <script>
+        $( document ).ready(function() {
+            loadData();
+        });
+        </script>
+
+
 	</head>
 	<body bgcolor="#ffffff" leftmargin="5" topmargin="5">
 		<br>
