FIX: Add "Loading ..." and correct the UPMS's IP

--- a/src/main/webapp/demo/landing.html
+++ b/src/main/webapp/demo/landing.html
@@ -20,6 +20,7 @@
 
         <script>
         $( document ).ready(function() {
+        	$('#displayValue1').html('Loading ...');
             loadData();
         });
         </script>
